--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/citasCapitulo2.bib
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/citasCapitulo2.bib
@@ -47,3 +47,24 @@
 	publisher={}
 }
 
+@misc{spring1,
+	title = {I finally get the point of inversion of control},
+	author = {Jason Young},
+	howpublished = {\url{http://www.ytechie.com/2008/06/i-finally-get-the-point-of-inversion-of-control/}},
+	note = {Accedido: 05/02/2019}
+}
+
+@book{spring2,
+	title={Spring Framework Cookbook},
+	author={Java Code Geeks},
+	year={2017},
+	publisher={Exelixis Media P.C.}
+}
+
+@book{spring3,
+	title={Spring in action - Fourth edition},
+	author={Craig Walls},
+	year={2015},
+	publisher={Manning - Shelter Island}
+}
+
